# ai_flash_cards

./: .gitignore  README.md  ai_handler.py  anki_api_handler.py  anki_handler.py  cards.json  config.yaml  enums.py  file_handler.py  helpers.py  main.py  plan.md  prompts.yaml  pyproject.toml
ai_flash_cards.egg-info/: PKG-INFO  SOURCES.txt
anki/anki-launcher-25.07.5-linux/: launcher.amd64  launcher.arm64
decks/: deck for learning finnish grammar_finnish.json
