[project]
name = "ai-flash-cards"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx>=0.2.4",
    "huggingface-hub>=0.34.4",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.18",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langchain-huggingface>=0.3.1",
    "langchain-mistralai>=0.2.11",
    "langchain-openai>=0.3.30",
    "ollama>=0.5.1",
    "pdfplumber>=0.11.7",
    "psutil>=7.0.0",
    "python-docx>=1.2.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "tenacity>=9.1.2",
    "tiktoken>=0.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]
